# learning-agent

./: .bash_aliases  .dockerignore  .env.example  .gitignore  AI_AGENT_FRAMEWORK_ANALYSIS.md  API_KEY_SECURITY.md  API_KEY_SECURITY_README.md  AUTOGEN_ARCHITECTURE_ANALYSIS.md  BRANCH_MANAGEMENT.md  CHANGELOG.md  DAILY_BRIEFING_CONFIG.md  DOCKER.md  Dockerfile  Dockerfile.public  FIX_REPORT.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  Makefile  README.md  STARTUP_GUIDE.md  USER.md  WORKSPACE_AGENT_ARCHITECTURE_ANALYSIS.md  WORK_AGENT_FRAMEWORK_ANALYSIS.md  ccp  custom_topic_generator.py  daily_briefing_cron.sh  deploy.sh  deploy_docker.sh  deploy_public.sh  deploy_public_release.sh  docker-compose.public.yml  docker-compose.yml  generate_custom.py  generate_framework.py  install_aliases.sh  learning-agent.service  llm_test.py  pyproject.toml  regenerate_topic.py  (+13 more)
.claude/: settings.local.json
claude-code-python/: .coverage  .env  .env.example  AGENT_LOOP.md  ALIYUN_SETUP.md  BUGFIX_MESSAGE_TOOL_CALLS.md  BUGFIX_REGISTRY_INPUT_CONVERSION.md  CAPABILITIES.md  DAY10_STATUS.md  DAY11_STATUS.md  DAY2_STATUS.md  DAY3_STATUS.md  DAY4_STATUS.md  DAY5_STATUS.md  DAY8_STATUS.md  DAY9_STATUS.md  GAP_ANALYSIS.md  GAP_COMPLETION_REPORT.md  INTEGRATION_TEST_REPORT.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_CREATION_GUIDE.md  PROJECT_PLAN.md  QUICKSTART.md  README.md  START_WEB.md  STOP.md  TECHNICAL_DESIGN.md  TEST_SUPPLEMENT_REPORT.md  WEB_EXEC_DIRECTORY.md  WEB_SERVER_GUIDE.md  WEB_SERVER_READY.md  WEB_SERVER_SUMMARY.md  pyproject.toml  start.sh  test_aliyun.py  test_coding_plan.py  test_connection.py  (+2 more)
claude-code-python/scripts/: demo_gaps.py  setup.sh  start_web.py  verify_gaps.py
claude-code-python/src/: __init__.py  config.py  main.py  web_server.py
claude-code-python/src/cli/: __init__.py  entry.py
claude-code-python/src/commands/: __init__.py  base.py  batch.py  history.py  interactive.py
claude-code-python/src/core/: __init__.py  agent.py  context.py  context_manager.py  error_recovery.py  session.py
claude-code-python/src/llm/: __init__.py  aliyun.py  anthropic.py  base.py
claude-code-python/src/models/: __init__.py  llm.py  messages.py  tools.py
claude-code-python/src/permissions/: __init__.py  approval.py  engine.py  manager.py  policies.py
claude-code-python/src/services/: __init__.py  git.py
claude-code-python/src/tools/: __init__.py  base.py  bash.py  file_edit.py  file_read.py  file_write.py  file_write_batch.py  git_tool.py  glob.py  grep.py  mkdir.py  project_template.py  registry.py
(+517 files in other folders)
